making the routes for the different identies of the CRM

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --color-grey-dark: #c2beb8;
   --color-orange-dark: #ad6d3e;
   --color-orange-light: #fa7e25;
+  --color-orange-soft: #f9e6ce;
   --color-red: #ff0033;
   --color-white: #ffffff;
   --color-black: #161616;
