--- a/src/components/navigation/Header/style.css
+++ b/src/components/navigation/Header/style.css
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  height: 62px;
+  height: 6.2rem;
   position: fixed;
   z-index: 2;
   display: flex;
@@ -11,6 +11,8 @@
 
 .header > span {
   margin-left: 30px;
+  font-weight: bold;
+  font-size: var(--font-large);
   color: #ffffff;
 }
 
@@ -29,6 +31,6 @@
 .nav span {
   display: inline-block;
   margin-right: 30px;
-  color: var(--color-red);
+  color: var(--primary-color);
   cursor: pointer;
 }
